Name:           icfpc2012
Version:        0.0.0
Cabal-Version:  >= 1.8
License:        BSD3
Author:         Team Sampou
Maintainer:     Team Sampou <masahiro.sakai@gmail.com>
Synopsis:       Lambda Lifter
Description:    icfpc2012
Stability:      experimental
Build-Type:	Simple
Extra-Source-Files:
  README.md
  samples/*.map

Source-Repository head
  type:     git
  location: git://github.com/msakai/icfpc2012.git

Library
  Build-Depends:      base >=4 && <5, array, containers
  Hs-Source-Dirs:     .
  Exposed-Modules:    Map, Move, Sim

Executable sim
  Main-is:            SimMain.hs
  HS-Source-Dirs:     .
  Build-Depends:      base >=4 && <5, array, containers
  Other-Modules:      Map, Move, Sim

Test-suite Test
  Type:              exitcode-stdio-1.0
  HS-Source-Dirs:    .
  Main-is:           Test.hs
  Build-depends:     base >=4 && <5, array, containers, test-framework, test-framework-th, test-framework-hunit, HUnit
  Extensions: TemplateHaskell
