Name:           icfpc2012
Version:        0.0.0
Cabal-Version:  >= 1.8
License:        BSD3
Author:         Team Sampou
Maintainer:     Team Sampou <masahiro.sakai@gmail.com>
Synopsis:       Lambda Lifter
Description:    icfpc2012
Stability:      experimental
Build-Type:	Simple
Extra-Source-Files:
  README
  PACKAGES
  install
  Makefile
  samples/*.map

Source-Repository head
  type:     git
  location: git://github.com/msakai/icfpc2012.git

Flag Static
  Description: force static linking
  Default: False

Library
  Build-Depends:      base >=4 && <5, array, containers, random
  Hs-Source-Dirs:     src
  Exposed-Modules:    GameState, Map, Metadata, Move, RandomWalk, SearchTree, Sim, Solver

Executable sim
  Main-is:            SimMain.hs
  HS-Source-Dirs:     src
  Build-Depends:      base >=4 && <5, array, containers, ansi-terminal
  Other-Modules:      GameState, Map, Metadata, Move, Sim

Executable lifter
  Main-is:            LifterMain.hs
  HS-Source-Dirs:     src
  Build-Depends:      base >=4 && <5, array, containers, random
  Other-Modules:      GameState, Map, Metadata, Move, Sim, Solver, RandomWalk, SearchTree, BFS, DFSGreedy, MonteCarloTreeSearch
  if flag(Static) && impl(ghc)
    GHC-Options: -static -optl-static -optl-pthread -rtsopts
  else
    GHC-Options: -rtsopts
    
Executable random-walk
  Main-is:            LifterMain.hs
  HS-Source-Dirs:     src
  Build-Depends:      base >=4 && <5, array, containers, random
  Other-Modules:      GameState, Map, Metadata, Move, Sim, Solver, RandomWalk, SearchTree, BFS, DFSGreedy, MonteCarloTreeSearch
  if flag(Static) && impl(ghc)
    GHC-Options: -static -optl-static -optl-pthread -rtsopts
  else
    GHC-Options: -rtsopts

Executable bfs
  Main-is:            LifterMain.hs
  HS-Source-Dirs:     src
  Build-Depends:      base >=4 && <5, array, containers, random
  Other-Modules:      GameState, Map, Metadata, Move, Sim, Solver, RandomWalk, SearchTree, BFS, DFSGreedy, MonteCarloTreeSearch
  if flag(Static) && impl(ghc)
    GHC-Options: -static -optl-static -optl-pthread -rtsopts
  else
    GHC-Options: -rtsopts

Executable dfs-greedy
  Main-is:            LifterMain.hs
  HS-Source-Dirs:     src
  Build-Depends:      base >=4 && <5, array, containers, random
  Other-Modules:      GameState, Map, Metadata, Move, Sim, Solver, RandomWalk, SearchTree, BFS, DFSGreedy, MonteCarloTreeSearch
  if flag(Static) && impl(ghc)
    GHC-Options: -static -optl-static -optl-pthread -rtsopts
  else
    GHC-Options: -rtsopts

Executable montecarlo
  Main-is:            LifterMain.hs
  HS-Source-Dirs:     src
  Build-Depends:      base >=4 && <5, array, containers, random
  Other-Modules:      GameState, Map, Metadata, Move, Sim, Solver, RandomWalk, SearchTree, BFS, DFSGreedy, MonteCarloTreeSearch
  if flag(Static) && impl(ghc)
    GHC-Options: -static -optl-static -optl-pthread -rtsopts
  else
    GHC-Options: -rtsopts

Test-suite Test
  Type:              exitcode-stdio-1.0
  HS-Source-Dirs:    src
  Main-is:           Test.hs
  Build-depends:     base >=4 && <5, array, containers, random, test-framework, test-framework-th, test-framework-hunit, HUnit
  Extensions: TemplateHaskell
